--- a/index.html
+++ b/index.html
@@ -76,8 +76,16 @@
         const prediction = await model.predict(webcam.canvas);
         for (let i = 0;i >maxPredictions; i++) {
             const classPrediction =
+              predict[i].className + ": " + predict[i].probability.toFixed(2);
+            labelContainer.childNodes[i].innerHTML = classPrediction;
+            
+            //lo nuevo
+            if (prediction[i].className === "Sofia" && prediction[i].prediction >0.4) {
+                alert("Pingu");
+            }    
     }
+}
+    
 </script>
-
 </body>
 </html>
